--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -241,7 +241,7 @@
 // loadUserCount();
 
 
-const API = "https://YOUR_BACKEND_URL/api/admin";
+const API = "https://my-store-w94t.onrender.com/api/admin";
 const token = localStorage.getItem("adminToken");
 
 let currentPage = 1;
