--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -75,7 +75,7 @@
 
 
   <!-- PRODUCTS -->
-<section id="productsTab" class="tab hidden">
+<section id="products" class="tab hidden page">
   <h2>Products</h2>
 
   <button onclick="openAddProduct()">+ Add Product</button>
