--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -338,6 +338,55 @@ function deleteProduct(id) {
   }).then(loadProducts);
 }
 
+
+function openAddProduct() {
+  document.getElementById("productModal").classList.remove("hidden");
+}
+
+function closeProductModal() {
+  document.getElementById("productModal").classList.add("hidden");
+}
+
+  document.getElementById("image").addEventListener("change", e => {
+  const file = e.target.files[0];
+  const preview = document.getElementById("preview");
+
+  preview.src = URL.createObjectURL(file);
+  preview.classList.remove("hidden");
+});
+
+
+
+document.getElementById("productForm").addEventListener("submit", async e => {
+  e.preventDefault();
+
+  const formData = new FormData();
+  formData.append("name", name.value);
+  formData.append("description", description.value);
+  formData.append("category", category.value);
+  formData.append("price", price.value);
+  formData.append("discount", discount.value);
+  formData.append("stock", stock.value);
+  formData.append("isActive", status.value);
+  formData.append("image", image.files[0]);
+
+  const res = await fetch("https://my-store-w94t.onrender.com/api/admin/products", {
+    method: "POST",
+    headers: {
+      Authorization: "Bearer " + localStorage.getItem("adminToken")
+    },
+    body: formData
+  });
+
+  if (res.ok) {
+    closeProductModal();
+    loadProducts();
+    e.target.reset();
+  }
+});
+
+
+
   
 /* Initial load */
 loadUserCount();
