--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -146,7 +146,7 @@
     </div>
 
     <!-- Form -->
-    <form id="productForm">
+    <form id="productForm" enctype="multipart/form-data">
 
       <input type="text" id="name" placeholder="Product Name" required>
 
