--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -357,26 +357,60 @@ function closeProductModal() {
 
 
 
+// document.getElementById("productForm").addEventListener("submit", async e => {
+//   e.preventDefault();
+
+//   const formData = new FormData();
+//   formData.append("name", name.value);
+//   formData.append("description", description.value);
+//   formData.append("category", category.value);
+//   formData.append("price", price.value);
+//   formData.append("discount", discount.value);
+//   formData.append("stock", stock.value);
+//   formData.append("isActive", status.value);
+//   formData.append("image", image.files[0]);
+
+//   const res = await fetch("https://my-store-w94t.onrender.com/api/admin/products", {
+//     method: "POST",
+//     headers: {
+//       Authorization: "Bearer " + localStorage.getItem("adminToken")
+//     },
+//     body: formData
+//   });
+
+//   if (res.ok) {
+//     closeProductModal();
+//     loadProducts();
+//     e.target.reset();
+//   }
+// });
+
+
+
 document.getElementById("productForm").addEventListener("submit", async e => {
   e.preventDefault();
 
   const formData = new FormData();
-  formData.append("name", name.value);
-  formData.append("description", description.value);
-  formData.append("category", category.value);
-  formData.append("price", price.value);
-  formData.append("discount", discount.value);
-  formData.append("stock", stock.value);
-  formData.append("isActive", status.value);
-  formData.append("image", image.files[0]);
 
-  const res = await fetch("https://my-store-w94t.onrender.com/api/admin/products", {
-    method: "POST",
-    headers: {
-      Authorization: "Bearer " + localStorage.getItem("adminToken")
-    },
-    body: formData
-  });
+  formData.append("name", document.getElementById("name").value);
+  formData.append("description", document.getElementById("description").value);
+  formData.append("category", document.getElementById("category").value);
+  formData.append("price", document.getElementById("price").value);
+  formData.append("discount", document.getElementById("discount").value);
+  formData.append("stock", document.getElementById("stock").value);
+  formData.append("isActive", document.getElementById("status").value);
+  formData.append("image", document.getElementById("image").files[0]);
+
+  const res = await fetch(
+    "https://my-store-w94t.onrender.com/api/admin/products",
+    {
+      method: "POST",
+      headers: {
+        Authorization: "Bearer " + localStorage.getItem("adminToken")
+      },
+      body: formData
+    }
+  );
 
   if (res.ok) {
     closeProductModal();
