--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -390,10 +390,10 @@ function deleteProduct(id) {
 
 
 function openAddProduct() {
-  editingProductId = null;
-  document.getElementById("productForm").reset();
-  document.querySelector(".submit-btn").innerText = "Add Product";
-  document.getElementById("preview").classList.add("hidden");
+  // editingProductId = null;
+  // document.getElementById("productForm").reset();
+  // document.querySelector(".submit-btn").innerText = "Add Product";
+  // document.getElementById("preview").classList.add("hidden");
   document.getElementById("productModal").classList.remove("hidden");
 }
 
