--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -80,6 +80,34 @@
   <h2>Products</h2>
 
   <button onclick="openAddProduct()">+ Add Product</button>
+  <div class="controls">
+
+  <input
+    type="text"
+    id="productSearch"
+    placeholder="Search by name or category"
+    oninput="loadProducts(1)"
+  />
+
+  <input type="number" id="minPrice" placeholder="Min ₹" />
+  <input type="number" id="maxPrice" placeholder="Max ₹" />
+
+  <select id="stockFilter" onchange="loadProducts(1)">
+    <option value="">All Stock</option>
+    <option value="in">In Stock</option>
+    <option value="out">Out of Stock</option>
+  </select>
+
+  <select id="statusFilterProduct" onchange="loadProducts(1)">
+    <option value="">All Status</option>
+    <option value="active">Active</option>
+    <option value="inactive">Inactive</option>
+  </select>
+
+  <button onclick="loadProducts(1)">Apply</button>
+
+</div>
+
 
   <table>
     <thead>
@@ -93,6 +121,17 @@
     </thead>
     <tbody id="productsTable"></tbody>
   </table>
+
+  <div class="pagination">
+  <button onclick="productPage > 1 && loadProducts(productPage - 1)">
+    Prev
+  </button>
+  <span id="productPageInfo"></span>
+  <button onclick="productPage < productPages && loadProducts(productPage + 1)">
+    Next
+  </button>
+</div>
+
 </section>
 
   <!-- ORDERS -->
@@ -323,43 +362,103 @@ async function deleteUser(id) {
 
 
 
-  function loadProducts() {
-  fetch("https://my-store-w94t.onrender.com/api/admin/products", {
+  // function loadProducts() {
+  // fetch("https://my-store-w94t.onrender.com/api/admin/products", {
+  //   headers: {
+  //     Authorization: "Bearer " + localStorage.getItem("adminToken")
+  //   }
+  // })
+  // .then(res => {
+  //   if (!res.ok) throw new Error("Unauthorized");
+  //   return res.json();
+  // })
+  // .then(products => {
+  //   const table = document.getElementById("productsTable");
+  //   table.innerHTML = "";
+
+  //   if (!products.length) {
+  //     table.innerHTML = `<tr><td colspan="5">No products</td></tr>`;
+  //     return;
+  //   }
+
+  //   products.forEach(p => {
+  //     table.innerHTML += `
+  //       <tr>
+  //         <td>${p.name}</td>
+  //         <td>₹${p.price}</td>
+  //         <td>${p.stock}</td>
+  //         <td>${p.isActive ? "Active" : "Inactive"}</td>
+  //         <td>
+  //           <button onclick="openEditProduct('${encodeURIComponent(JSON.stringify(p))}')">
+  //             Edit
+  //           </button>
+  //           <button onclick="toggleProduct('${p._id}')">Toggle</button>
+  //           <button onclick="deleteProduct('${p._id}')">Delete</button>
+  //         </td>
+  //       </tr>
+  //     `;
+  //   });
+  // })
+let productPage = 1;
+let productPages = 1;
+
+function loadProducts(page = 1) {
+  productPage = page;
+
+  const search = document.getElementById("productSearch").value;
+  const minPrice = document.getElementById("minPrice").value;
+  const maxPrice = document.getElementById("maxPrice").value;
+  const stock = document.getElementById("stockFilter").value;
+  const status = document.getElementById("statusFilterProduct").value;
+
+  const params = new URLSearchParams({
+    search,
+    minPrice,
+    maxPrice,
+    stock,
+    status,
+    page,
+    limit: 5
+  });
+
+  fetch(`https://my-store-w94t.onrender.com/api/admin/products?${params}`, {
     headers: {
       Authorization: "Bearer " + localStorage.getItem("adminToken")
     }
   })
-  .then(res => {
-    if (!res.ok) throw new Error("Unauthorized");
-    return res.json();
-  })
-  .then(products => {
-    const table = document.getElementById("productsTable");
-    table.innerHTML = "";
+    .then(res => res.json())
+    .then(data => {
+      const table = document.getElementById("productsTable");
+      table.innerHTML = "";
 
-    if (!products.length) {
-      table.innerHTML = `<tr><td colspan="5">No products</td></tr>`;
-      return;
-    }
+      if (!data.products.length) {
+        table.innerHTML = `<tr><td colspan="5">No products found</td></tr>`;
+        return;
+      }
 
-    products.forEach(p => {
-      table.innerHTML += `
-        <tr>
-          <td>${p.name}</td>
-          <td>₹${p.price}</td>
-          <td>${p.stock}</td>
-          <td>${p.isActive ? "Active" : "Inactive"}</td>
-          <td>
-            <button onclick="openEditProduct('${encodeURIComponent(JSON.stringify(p))}')">
-              Edit
-            </button>
-            <button onclick="toggleProduct('${p._id}')">Toggle</button>
-            <button onclick="deleteProduct('${p._id}')">Delete</button>
-          </td>
-        </tr>
-      `;
+      productPages = data.pages;
+
+      data.products.forEach(p => {
+        table.innerHTML += `
+          <tr>
+            <td>${p.name}</td>
+            <td>₹${p.price}</td>
+            <td>${p.stock}</td>
+            <td>${p.isActive ? "Active" : "Inactive"}</td>
+            <td>
+              <button onclick="openEditProduct('${encodeURIComponent(JSON.stringify(p))}')">Edit</button>
+              <button onclick="toggleProduct('${p._id}')">Toggle</button>
+              <button onclick="deleteProduct('${p._id}')">Delete</button>
+            </td>
+          </tr>
+        `;
+        document.getElementById("productPageInfo").innerText =
+  `Page ${productPage} of ${productPages}`;
+
+      });
     });
-  })
+}
+
   .catch(err => {
     console.error(err);
     alert("Admin session expired. Login again.");
