--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -332,73 +332,7 @@ async function deleteUser(id) {
   loadUsers(currentPage);
 }
 
-// function loadProducts() {
-//   fetch("https://my-store-w94t.onrender.com/api/admin/products", {
-//     headers: {
-//       Authorization: "Bearer " + localStorage.getItem("adminToken")
-//     }
-//   })
-//   .then(res => res.json())
-//   .then(products => {
-//     const table = document.getElementById("productsTable");
-//     table.innerHTML = "";
-
-//     products.forEach(p => {
-//       table.innerHTML += `
-//         <tr>
-//           <td>${p.name}</td>
-//           <td>₹${p.price}</td>
-//           <td>${p.stock}</td>
-//           <td>${p.isActive ? "Active" : "Inactive"}</td>
-//           <td>
-//             <button onclick="toggleProduct('${p._id}')">Toggle</button>
-//             <button onclick="deleteProduct('${p._id}')">Delete</button>
-//           </td>
-//         </tr>
-//       `;
-//     });
-//   });
-// }
-
-
-
-  // function loadProducts() {
-  // fetch("https://my-store-w94t.onrender.com/api/admin/products", {
-  //   headers: {
-  //     Authorization: "Bearer " + localStorage.getItem("adminToken")
-  //   }
-  // })
-  // .then(res => {
-  //   if (!res.ok) throw new Error("Unauthorized");
-  //   return res.json();
-  // })
-  // .then(products => {
-  //   const table = document.getElementById("productsTable");
-  //   table.innerHTML = "";
-
-  //   if (!products.length) {
-  //     table.innerHTML = `<tr><td colspan="5">No products</td></tr>`;
-  //     return;
-  //   }
-
-  //   products.forEach(p => {
-  //     table.innerHTML += `
-  //       <tr>
-  //         <td>${p.name}</td>
-  //         <td>₹${p.price}</td>
-  //         <td>${p.stock}</td>
-  //         <td>${p.isActive ? "Active" : "Inactive"}</td>
-  //         <td>
-  //           <button onclick="openEditProduct('${encodeURIComponent(JSON.stringify(p))}')">
-  //             Edit
-  //           </button>
-  //           <button onclick="toggleProduct('${p._id}')">Toggle</button>
-  //           <button onclick="deleteProduct('${p._id}')">Delete</button>
-  //         </td>
-  //       </tr>
-  //     `;
-  //   });
-  // })
+  
 let productPage = 1;
 let productPages = 1;
 
@@ -421,50 +355,94 @@ function loadProducts(page = 1) {
     limit: 5
   });
 
+
   fetch(`https://my-store-w94t.onrender.com/api/admin/products?${params}`, {
-    headers: {
-      Authorization: "Bearer " + localStorage.getItem("adminToken")
+  headers: {
+    Authorization: "Bearer " + localStorage.getItem("adminToken")
+  }
+})
+  .then(res => res.json())
+  .then(data => {
+    const table = document.getElementById("productsTable");
+    table.innerHTML = "";
+
+    if (!data.products.length) {
+      table.innerHTML = `<tr><td colspan="5">No products found</td></tr>`;
+      return;
     }
-  })
-    .then(res => res.json())
-    .then(data => {
-      const table = document.getElementById("productsTable");
-      table.innerHTML = "";
 
-      if (!data.products.length) {
-        table.innerHTML = `<tr><td colspan="5">No products found</td></tr>`;
-        return;
-      }
+    productPages = data.pages;
 
-      productPages = data.pages;
-
-      data.products.forEach(p => {
-        table.innerHTML += `
-          <tr>
-            <td>${p.name}</td>
-            <td>₹${p.price}</td>
-            <td>${p.stock}</td>
-            <td>${p.isActive ? "Active" : "Inactive"}</td>
-            <td>
-              <button onclick="openEditProduct('${encodeURIComponent(JSON.stringify(p))}')">Edit</button>
-              <button onclick="toggleProduct('${p._id}')">Toggle</button>
-              <button onclick="deleteProduct('${p._id}')">Delete</button>
-            </td>
-          </tr>
-        `;
-        document.getElementById("productPageInfo").innerText =
-  `Page ${productPage} of ${productPages}`;
-
-      });
+    data.products.forEach(p => {
+      table.innerHTML += `
+        <tr>
+          <td>${p.name}</td>
+          <td>₹${p.price}</td>
+          <td>${p.stock}</td>
+          <td>${p.isActive ? "Active" : "Inactive"}</td>
+          <td>
+            <button onclick="openEditProduct('${encodeURIComponent(JSON.stringify(p))}')">Edit</button>
+            <button onclick="toggleProduct('${p._id}')">Toggle</button>
+            <button onclick="deleteProduct('${p._id}')">Delete</button>
+          </td>
+        </tr>
+      `;
     });
-}
 
+    document.getElementById("productPageInfo").innerText =
+      `Page ${productPage} of ${productPages}`;
+  })
   .catch(err => {
     console.error(err);
     alert("Admin session expired. Login again.");
     window.location.href = "admin-login.html";
   });
-}
+
+
+//   fetch(`https://my-store-w94t.onrender.com/api/admin/products?${params}`, {
+//     headers: {
+//       Authorization: "Bearer " + localStorage.getItem("adminToken")
+//     }
+//   })
+//     .then(res => res.json())
+//     .then(data => {
+//       const table = document.getElementById("productsTable");
+//       table.innerHTML = "";
+
+//       if (!data.products.length) {
+//         table.innerHTML = `<tr><td colspan="5">No products found</td></tr>`;
+//         return;
+//       }
+
+//       productPages = data.pages;
+
+//       data.products.forEach(p => {
+//         table.innerHTML += `
+//           <tr>
+//             <td>${p.name}</td>
+//             <td>₹${p.price}</td>
+//             <td>${p.stock}</td>
+//             <td>${p.isActive ? "Active" : "Inactive"}</td>
+//             <td>
+//               <button onclick="openEditProduct('${encodeURIComponent(JSON.stringify(p))}')">Edit</button>
+//               <button onclick="toggleProduct('${p._id}')">Toggle</button>
+//               <button onclick="deleteProduct('${p._id}')">Delete</button>
+//             </td>
+//           </tr>
+//         `;
+//         document.getElementById("productPageInfo").innerText =
+//   `Page ${productPage} of ${productPages}`;
+
+//       });
+//     });
+// }
+
+//   .catch(err => {
+//     console.error(err);
+//     alert("Admin session expired. Login again.");
+//     window.location.href = "admin-login.html";
+//   });
+// }
 
 
   function toggleProduct(id) {
@@ -508,37 +486,6 @@ function closeProductModal() {
   preview.classList.remove("hidden");
 });
 
-// document.getElementById("productForm").addEventListener("submit", async e => {
-//   e.preventDefault();
-
-//   const formData = new FormData();
-
-//   formData.append("name", document.getElementById("name").value);
-//   formData.append("description", document.getElementById("description").value);
-//   formData.append("category", document.getElementById("category").value);
-//   formData.append("price", document.getElementById("price").value);
-//   formData.append("discount", document.getElementById("discount").value);
-//   formData.append("stock", document.getElementById("stock").value);
-//   formData.append("isActive", document.getElementById("status").value);
-//   formData.append("image", document.getElementById("image").files[0]);
-
-//   const res = await fetch(
-//     "https://my-store-w94t.onrender.com/api/admin/products",
-//     {
-//       method: "POST",
-//       headers: {
-//         Authorization: "Bearer " + localStorage.getItem("adminToken")
-//       },
-//       body: formData
-//     }
-//   );
-
-//   if (res.ok) {
-//     closeProductModal();
-//     loadProducts();
-//     e.target.reset();
-//   }
-// });
 
   function openEditProduct(productStr) {
   const product = JSON.parse(decodeURIComponent(productStr));
@@ -552,7 +499,7 @@ function closeProductModal() {
   document.getElementById("stock").value = product.stock;
   document.getElementById("status").value = product.isActive;
 
-if (product.image?.url) {
+if (product.image && product.image.url) {
   const preview = document.getElementById("preview");
   preview.src = product.image.url;
   preview.classList.remove("hidden");
