--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -110,16 +110,16 @@
 <div class="product-toolbar">
   <div>
     <button onclick="setView('list')" title="List View">
-      <span class="material-icons">view_list</span>
+      <span class="material-icons icon.btn">view_list</span>
     </button>
 
     <button onclick="setView('grid')" title="Grid View">
-      <span class="material-icons">grid_view</span>
+      <span class="material-icons icon.btn">grid_view</span>
     </button>
   </div>
 
   <button onclick="refreshProducts()" title="Refresh">
-    <span class="material-icons">refresh</span>
+    <span class="material-icons icon.btn">refresh</span>
   </button>
 </div>
 
