--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -677,6 +677,12 @@ if (product.image && product.image.url) {
   if (imageInput.files[0]) {
     formData.append("image", imageInput.files[0]);
   }
+    document.querySelectorAll("#categoryFields input").forEach(input => {
+  if (input.value.trim() !== "") {
+    formData.append(input.id, input.value);
+  }
+});
+
 
   const url = editingProductId
     ? `https://my-store-w94t.onrender.com/api/admin/products/${editingProductId}`
