--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -262,6 +262,12 @@
         <option value="electronics">Electronics</option>
         <option value="fashion">Fashion</option>
       </select>
+
+        <select id="variantToggle">
+          <option value="no">Has Variants? No</option>
+          <option value="yes">Has Variants? Yes</option>
+        </select>
+
       
       <!-- Loader -->
       <div id="categoryLoader" class="loader hidden"></div>
