--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -168,12 +168,26 @@
   </section>
 
   <!-- CATEGORIES -->
-  <section id="categories" class="page">
+<section id="categories" class="page">
+  <div class="page-header">
     <h1>Categories</h1>
-    <input placeholder="New category">
-    <button>Add</button>
-    <ul class="list"></ul>
-  </section>
+    <button onclick="openCategoryModal()">+ Add Category</button>
+  </div>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Icon</th>
+        <th>Status</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody id="categoryTable"></tbody>
+  </table>
+</section>
+
 
   <!-- ANALYTICS -->
   <section id="analytics" class="page">
@@ -191,50 +205,45 @@
 </main>
 
 
-  <!-- Add Product Modal -->
-<!-- <div id="productModal" class="modal hidden">
-  <div class="modal-content"> -->
-    
-    <!-- Header -->
-    <!-- <div class="modal-header">
-      <h3>Add Product</h3>
-      <span class="material-icons close-btn" onclick="closeProductModal()">close</span>
-    </div> -->
 
-    <!-- Form -->
-    <!-- <form id="productForm" enctype="multipart/form-data">
+  
+<div id="categoryModal" class="modal hidden">
+  <div class="modal-content">
 
-      <input type="text" id="name" placeholder="Product Name" required>
+    <div class="modal-header">
+      <h3>Add Category</h3>
+      <span class="material-icons close-btn" onclick="closeCategoryModal()">close</span>
+    </div>
 
-      <textarea id="description" placeholder="Product Description" required></textarea>
+    <form id="categoryForm" enctype="multipart/form-data">
 
-      <input type="text" id="category" placeholder="Category (eg: Electronics, Fashion)" required>
+      <input type="text" id="catName" placeholder="Category Name" required>
 
-      <div class="row">
-        <input type="number" id="price" placeholder="Price ₹" required>
-        <input type="number" id="discount" placeholder="Discount %" value="0">
-      </div>
+      <input type="text" id="catIcon" placeholder="Material Icon (eg: category)" required>
 
-      <input type="number" id="stock" placeholder="Stock Quantity" required>
-
-      <select id="status">
+      <select id="catStatus">
         <option value="true">Active</option>
         <option value="false">Inactive</option>
       </select>
 
-      <!-- Image -->
-      <!-- <label class="image-upload">
+      <label class="image-upload">
         <span class="material-icons">upload</span>
         Upload Image
-        <input type="file" id="image" accept="image/*" hidden>
+        <input type="file" id="catImage" hidden>
       </label>
 
-      <img id="preview" class="preview hidden">
+      <img id="catPreview" class="preview hidden">
 
-      <button type="submit" class="submit-btn">Add Product</button>
+      <button type="submit" class="submit-btn">Add Category</button>
     </form>
   </div>
-</div>  -->
+</div>
+
+
+
+
+
+  
 
   <div id="productModal" class="modal hidden">
   <div class="modal-content wide">
@@ -549,51 +558,6 @@ if (productView === "list") {
   });
 }
 
-//   fetch(`https://my-store-w94t.onrender.com/api/admin/products?${params}`, {
-//     headers: {
-//       Authorization: "Bearer " + localStorage.getItem("adminToken")
-//     }
-//   })
-//     .then(res => res.json())
-//     .then(data => {
-//       const table = document.getElementById("productsTable");
-//       table.innerHTML = "";
-
-//       if (!data.products.length) {
-//         table.innerHTML = `<tr><td colspan="5">No products found</td></tr>`;
-//         return;
-//       }
-
-//       productPages = data.pages;
-
-//       data.products.forEach(p => {
-//         table.innerHTML += `
-//           <tr>
-//             <td>${p.name}</td>
-//             <td>₹${p.price}</td>
-//             <td>${p.stock}</td>
-//             <td>${p.isActive ? "Active" : "Inactive"}</td>
-//             <td>
-//               <button onclick="openEditProduct('${encodeURIComponent(JSON.stringify(p))}')">Edit</button>
-//               <button onclick="toggleProduct('${p._id}')">Toggle</button>
-//               <button onclick="deleteProduct('${p._id}')">Delete</button>
-//             </td>
-//           </tr>
-//         `;
-//         document.getElementById("productPageInfo").innerText =
-//   `Page ${productPage} of ${productPages}`;
-
-//       });
-//     });
-// }
-
-//   .catch(err => {
-//     console.error(err);
-//     alert("Admin session expired. Login again.");
-//     window.location.href = "admin-login.html";
-//   });
-// }
-
 
   function toggleProduct(id) {
   fetch(`https://my-store-w94t.onrender.com/api/admin/products/${id}/status`, {
@@ -706,10 +670,98 @@ if (product.image && product.image.url) {
   }
 });
 
+  /* CATEGORY MODAL */
+function openCategoryModal() {
+  document.getElementById("categoryModal").classList.remove("hidden");
+}
+
+function closeCategoryModal() {
+  document.getElementById("categoryModal").classList.add("hidden");
+}
+
+/* IMAGE PREVIEW */
+document.getElementById("catImage").addEventListener("change", e => {
+  const file = e.target.files[0];
+  const preview = document.getElementById("catPreview");
+  preview.src = URL.createObjectURL(file);
+  preview.classList.remove("hidden");
+});
+
+/* LOAD CATEGORIES */
+function loadCategories() {
+  fetch(`${API}/categories`, {
+    headers: { Authorization: "Bearer " + token }
+  })
+    .then(res => res.json())
+    .then(categories => {
+      const table = document.getElementById("categoryTable");
+      table.innerHTML = "";
+
+      categories.forEach(c => {
+        table.innerHTML += `
+          <tr>
+            <td><img src="${c.image?.url || ""}" width="50"></td>
+            <td>${c.name}</td>
+            <td><span class="material-icons">${c.icon}</span></td>
+            <td>${c.isActive ? "Active" : "Inactive"}</td>
+            <td>
+              <button onclick="toggleCategory('${c._id}')">Toggle</button>
+              <button onclick="deleteCategory('${c._id}')">Delete</button>
+            </td>
+          </tr>
+        `;
+      });
+    });
+}
+
+/* ADD CATEGORY */
+document.getElementById("categoryForm").addEventListener("submit", async e => {
+  e.preventDefault();
+
+  const formData = new FormData();
+  formData.append("name", catName.value);
+  formData.append("icon", catIcon.value);
+  formData.append("isActive", catStatus.value);
+
+  if (catImage.files[0]) {
+    formData.append("image", catImage.files[0]);
+  }
+
+  await fetch(`${API}/categories`, {
+    method: "POST",
+    headers: { Authorization: "Bearer " + token },
+    body: formData
+  });
+
+  closeCategoryModal();
+  e.target.reset();
+  loadCategories();
+});
+
+/* TOGGLE */
+function toggleCategory(id) {
+  fetch(`${API}/categories/${id}/status`, {
+    method: "PATCH",
+    headers: { Authorization: "Bearer " + token }
+  }).then(loadCategories);
+}
+
+/* DELETE */
+function deleteCategory(id) {
+  if (!confirm("Delete this category?")) return;
+
+  fetch(`${API}/categories/${id}`, {
+    method: "DELETE",
+    headers: { Authorization: "Bearer " + token }
+  }).then(loadCategories);
+}
+
+
 
 /* Initial load */
 loadUserCount();
 loadProducts();
+loadCategories();
 
 
 
