--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -266,7 +266,7 @@
         <option value="electronics">Electronics</option>
         <option value="fashion">Fashion</option>
       </select>
-
+        <input id="subCategory" type="text" placeholder="Sub-Categories">
       <!-- Loader -->
       <div id="categoryLoader" class="loader hidden"></div>
 
@@ -631,6 +631,7 @@ if (product.image && product.image.url) {
   formData.append("name", document.getElementById("name").value);
   formData.append("description", document.getElementById("description").value);
   formData.append("category", document.getElementById("category").value);
+  formData.append("subCategory",document.getElementById("subCategory").value);
   formData.append("price", document.getElementById("price").value);
   formData.append("discount", document.getElementById("discount").value);
   formData.append("stock", document.getElementById("stock").value);
